--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="app/js/app.js"></script>
 <script src="app/js/controllers/layout.js"></script>
-<script src="app/js/controllers/post.js"></script>
+<script src="app/js/controllers/posts.js"></script>
 
 </head>
 <body>
+  <div class="header">
+    <a ui-sref=".home">Home</a>
+    <a ui-sref=".posts">Posts</a>
+  </div>
   <div ui-view>
   </div>
 </body>
