--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<link rel="stylesheet" href="app/css/style.css" type="text/css">
 <script src="app/js/app.js"></script>
 <script src="app/js/controllers/layout.js"></script>
 <script src="app/js/controllers/posts.js"></script>
