--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <link rel="stylesheet" href="app/css/style.css" type="text/css">
 <script src="app/js/app.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 <script src="app/js/controllers/layout.js"></script>
 <script src="app/js/controllers/posts.js"></script>
 
 </head>
 <body>
   <div class="header">
+    <h1 class="blog-title">stephanie kwak</h1>
     <a ui-sref=".home">Home</a>
     <a ui-sref=".posts">Posts</a>
   </div>
