styling and add useless ngif

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
   <div class="header">
     <h1 class="blog-title">stephanie kwak</h1>
-    <a ui-sref=".home">Home</a>
-    <a ui-sref=".posts">Posts</a>
+    <a ui-sref=".home">Home</a> / <a ui-sref=".posts">Posts</a>
   </div>
   <div ui-view>
   </div>
