--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 
 </head>
 <body>
-  <div class="header">
-    <h1 class="blog-title">stephanie kwak</h1>
-    <a ui-sref=".home">Home</a> / <a ui-sref=".posts">Posts</a>
+  <h1 class="blog-title">stephanie kwak</h1>
+
+  <a ui-sref=".home">Home</a> / <a ui-sref=".posts">Posts</a> / <a ui-sref=".about">About</a>
+    
+    <div ui-view>
+    </div>
+      
   </div>
-  <div ui-view>
-  </div>
+  
 </body>
 </html>
