load services.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 <script src="app/js/controllers/layout.js"></script>
 <script src="app/js/controllers/posts.js"></script>
+<script src="app/js/services.js"></script>
 
 </head>
 <body>
