add new post page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1 class="blog-title">stephanie kwak</h1>
 
-  <a ui-sref=".home">Home</a> / <a ui-sref=".posts">Posts</a> / <a ui-sref=".about">About</a>
+  <a ui-sref=".home">Home</a> / <a ui-sref=".about">About</a> / <a ui-sref=".posts">Posts</a> / <a ui-sref=".new">Add New Post</a>
     
     <div ui-view>
     </div>
